# eventedge

./: .env.example  .gitignore  AUTORESEARCH_ARCHITECTURE_MAP.md  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
cli/: main.py
docs/: next-gen-improvements.md  next-wave-cohort-redesign.md  strategy_research.md
docs/archive/: 2026-03-29-autoresearch-design.md  (+2 more)
results/: dry_run.db  tradingagents.db
scripts/: backfill_equity_history.py  daily_trading.sh  dry_run.py  email_dashboard.py  generate_daily_report.py  run_cohorts.py  run_generation.py  run_generations.py
tests/: test_30day_simulation.py  test_alerts.py  test_autoresearch_integration.py  test_autoresearch_models.py  test_autoresearch_simulation.py  test_backtesting.py  test_cached_pipeline.py  test_cli.py  test_cohort_lifecycle.py  test_cohort_redesign.py  test_committee_vehicle.py  test_commodity_macro.py  test_commodity_macro_live.py  test_config.py  test_congressional_shorts.py  test_covered_call_overlay.py  test_cycle_tracker.py  test_dashboard.py  test_drought_monitor_source.py  test_eligibility.py  test_eligibility_wiring.py  test_email_dashboard.py  test_evolution.py  test_execution.py  test_execution_bridge_shorts.py  test_fast_backtest.py  test_fitness.py  test_forward_backtest.py  test_gen005_fixes.py  test_generation_manager.py  test_integration.py  test_integration_shorts.py  test_metrics.py  test_multi_strategy.py  test_openbb_source.py  test_option_spec.py  test_options_analyst.py  test_options_data.py  test_paper_broker_shorts.py  test_portfolio.py  (+13 more)
tradingagents/: default_config.py
(+190 files in other folders)
