[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eventedge"
version = "0.4.0"
description = "EventEdge: Autonomous event-driven trading research — daily 16-cohort paper trading across 12 strategies, with LLM-powered portfolio committee."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "alpaca-py>=0.35.0",
    "finnhub-python>=2.4.0",
    "fredapi>=0.5.2",
    "httpx>=0.27.0",
    "kaleido>=0.2.1",
    "numpy>=1.26.0",
    "pandas>=2.3.0",
    "plotly>=6.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.4",
    "streamlit>=1.45.0",
    "yfinance>=0.2.63",
    "setuptools>=80.9.0",
]

[project.optional-dependencies]
openbb = [
    "openbb-core",
    "openbb-equity",
    "openbb-derivatives",
    "openbb-regulators",
    "openbb-sec",
    "openbb-yfinance",
    "openbb-fmp",
    "openbb-finra",
    "openbb-famafrench",
]
commodities = [
    "cot_reports",
]

[tool.pytest.ini_options]
markers = [
    "live: marks tests that hit real APIs (deselect with '-m \"not live\"')",
]

[tool.setuptools.packages.find]
include = ["tradingagents*"]
